Sun Jun 26 13:35:35 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_dump.c (rb_vm_bugreport): change CrashReporter suggestion messages
	  on Mac. It should be placed after "-- C level backtrace" line.
	  Suggested by Endoh-san.

	  <before>
	  -- See Crash Report log file under ~/Library/Logs/CrashReporter or ---------
	  -- /Library/Logs/CrashReporter, for the more detail of ---------------------
	  -- C level backtrace information -------------------------------------------

	<after>
	  -- C level backtrace information -------------------------------------------

	     See Crash Report log file under ~/Library/Logs/CrashReporter or
	     /Library/Logs/CrashReporter, for the more detail of.

Sun Jun 26 10:08:28 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/extconf.rb
	* ext/openssl/ossl_missing.h/.c: add ASN1_put_eoc if missing.

	* ext/openssl/ossl_asn1.c: introduce ossl_asn1_object_size and
	  ossl_asn1_put_object to wrap functionality depending on OpenSSL
	  version in use.
	  Fixes	[ Ruby 1.9 - Bug #4916 ] reported by Hiroshi Nakamura.
	  [ruby-core:37286]

Sun Jun 26 01:00:15 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (date_strftime_internal): removed meaningless braces.
	* ext/date/date_core.c (gengo): the value should be int.

Sat Jun 25 23:45:30 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* vm_insnhelper.c (vm_search_superclass): avoid control frame
	  stack overrun. currently super() in Proc created in a method
	  defined by Module#define_method raise NoMethodError. [Bug #4881]
	* test/ruby/test_method.rb t_super_in_proc_from_define_method):
	  add test for it.

Sat Jun 25 23:23:14 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* thread.c (sleep_forever): now Kernel#sleep don't wakeup by
	  signal handler execution. [Bug #4072]

Sat Jun 25 23:14:47 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* thread.c (rb_threadptr_check_signal): remove unnecessary th->status